packages/kit/test/apps/basics/src/routes/load/invalidation/server-fetch/+page.svelte
<script>
	export let data;
</script>

<p data-testid="count">{data.count}</p>
